<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.myapplication.CreateReport">

        <include layout="@layout/app_bar" />

        <ImageView
            android:id="@+id/imgView"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_below="@+id/app_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:cropToPadding="true"
            android:onClick="onTakePhoto"
            android:padding="1dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <!--Rep type-->
        <TextView
            android:id="@+id/tvReportType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/imgView"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/spReportType"
            android:text="@string/spn_rep_type" />

        <Spinner
            android:id="@+id/spReportType"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView"
            android:layout_toLeftOf="@+id/tvReportType"
            android:background="@android:drawable/btn_dropdown"
            android:prompt="@string/spn_rep_type"
            android:spinnerMode="dialog" />

        <!--Car type-->
        <TextView
            android:id="@+id/tvCarType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/spReportType"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/spCarType"
            android:text="@string/car_type" />

        <Spinner
            android:id="@+id/spCarType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spReportType"
            android:layout_toLeftOf="@+id/tvReportType"
            android:background="@android:drawable/btn_dropdown"
            android:prompt="@string/car_type"
            android:spinnerMode="dropdown" />

        <!--Car color-->
        <TextView
            android:id="@+id/tvCarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/tvCarType"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="10dp"
            android:labelFor="@+id/spCarColor"
            android:text="@string/car_color" />

        <Spinner
            android:id="@+id/spCarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCarType"
            android:layout_marginBottom="8dp"
            android:layout_toLeftOf="@+id/tvReportType"
            android:background="@android:drawable/btn_dropdown"
            android:prompt="@string/car_color"
            android:spinnerMode="dropdown" />

        <!--Plate num-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPlateNumWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/spCarColor"
            android:layout_marginBottom="8dp"
            >

            <RelativeLayout
                android:id="@+id/rlPlateNum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etAddressWrap">

                <EditText
                    android:id="@+id/etPlateNum"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="8dp"
                    android:enabled="false"
                    android:hint="@string/license_plate"
                    android:theme="@style/MyEditText" />

                <Button
                    android:id="@+id/buttonFloat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignLeft="@+id/etPlateNum"
                    android:onClick="onPlateRecognition"
                    android:layout_gravity="end"
                    android:background="@android:drawable/ic_menu_search" />

            </RelativeLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Date-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etDateWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPlateNumWrap"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/date"
                android:inputType="date" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Time-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etTimeWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDateWrap"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etTimeWrap"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/hour"
                android:inputType="time"
                android:theme="@style/MyEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Fine-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etFineWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etTimeWrap"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etFineAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etTimeWrap"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/fine_amount"
                android:inputType="number"
                android:theme="@style/MyEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etAddressWrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etFineWrap"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etAddressWrap"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:hint="@string/address"
                android:theme="@style/MyEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Creation-->
        <Button
            android:id="@+id/btCreateReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etAddressWrap"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="28dp"
            android:layout_marginTop="28dp"
            android:onClick="onCreateReport"
            android:text="@string/btn_new_rep"
            android:textColor="#f8fdf9" />

    </RelativeLayout>
</ScrollView>